service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xfce-user-env
spec:
  type: LoadBalancer  # Hier wird der Service als LoadBalancer definiert
  ports:
  - port: 6080
    name: novnc
  - port: 8080
    name: code-server
  selector:
    app: xfce-user-env
