virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: xfce-user-env
spec:
  hosts:
  - "ide.example.com"
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        prefix: /user/
    route:
    - destination:
        host: xfce-user-env
        port:
          number: 6080
